syntax = 'proto3';

package im.actor.server;

message BotWebHook {
    int32 user_id = 1;
    string name = 2;
}
